MDEV-37929 Assertion !thd->rgi_slave' failed on REPAIR TABLE on replica

1. REPAIR TABLES is logged even if open_table is failed. In this case,
we cannot determine whether it was opened for a global temporary table,
so we cannot make sure it is not replicated.

2. Also REPAIR/ANALYZE/CHECK can include more that one table, and has no
ability co control statement logging per-table, so anyway relying on
that it's not logged is incorrect.

Hence, enable writing to binlog for these three statements. Keep replica
to be able to handle these commands.
As such, force REPAIR/ANALYZE/CHECK to open a parent handle of global
temporary table.

Extract sql_command_flags flag CF_USE_PARENT_GTT_SHARE for global
temporary tables, as a critical mass of statements has been reached.

Also fixes:
MDEV-37929 Assertion !thd->rgi_slave' failed on REPAIR TABLE on replica