sql/sql_table.cc
@@ -6331,7 +6331,6 @@ my_bool open_global_temporary_table(THD *thd, TABLE_SHARE *source,
 
   if (table->s->on_commit_delete())
     thd->use_global_tmp_table_tp();
-  thd->lex->no_write_to_binlog= true;
   if (!thd->locked_tables_mode ||
       ot_ctx->get_flags() & MYSQL_OPEN_GET_NEW_TABLE)
     tdc_release_share(source);
